--- a/cvpr22/config/nyu.yaml
+++ b/cvpr22/config/nyu.yaml
@@ -4,8 +4,8 @@ io:
   resume_from:               # load a checkpoint and check the result
   dataset: NYU               # dataset
   datadir: dataset/nyu_vp/processed_data
-  ht_mapping: parameterization/nyu/ht_240_320_403_180.npz
-  sphere_mapping: parameterization/nyu/sphere_neighbors_403_180_32768.npz
+  ht_mapping: ./parameterization/nyu/ht_240_320_403_180.npz
+  sphere_mapping: ./parameterization/nyu/sphere_neighbors_403_180_32768.npz
   focal_length: 1.0          # change f when doing cross tests
   num_neighbors: 20          # top-k neighbors
   num_vpts:                  # number of VPs
